bin/tui/src/snapshots/tui__snapshot_tests__snap_tree_options_screen.snap
---
source: bin/tui/src/snapshot_tests.rs
expression: out
---
" Session: s1─────────────────────────────────────────────────────────── [idle]  "
" ╭User────────────────────────────────────────────────────────────────────────╮ "
" │ hello                                                                      │ "
" ╰────────────────────────────────────────────────────────────────────────────╯ "
"                                                                                "
" ╭──────────────╭commands (compact) — 4 items──────────────────╮──────────────╮ "
" │ hi           │╭commands────────────────────────────────────╮│              │ "
" ╰──────────────││❯ R View-only                               ││──────────────╯ "
"                ││  R Rewind without summary                  ││                "
"                ││  R Summarize the branch  pending kernel    ││                "
"                ││  R Summarize with custom prompt  pending ke││                "
"                ││                                            ││                "
"                ││                                            ││                "
"                ││                                            ││                "
"                ││                                            ││                "
"                ││                                            ││                "
"                │╰────────────────────────────────────────────╯│                "
"                │:  j/k move · enter ok · esc close · ctrl-p pr│                "
"                ╰──────────────────────────────────────────────╯                "
" ╭[INSERT]────────────────────────────────────────────────────────────────────╮ "
" │                                                                            │ "
" │                                                                            │ "
" ╰────────────────────────────────────────────────────────────────────────────╯ "
"  q×2 quit · Ctrl+R run · Ctrl+E edit · Enter send · Ctrl-J ⏎ · vim · y/n/e · T "
