bin/tui/src/snapshots/tui__snapshot_tests__snap_turn_fold_cursor_remap.snap
---
source: bin/tui/src/snapshot_tests.rs
expression: out
---
" Session: s1─────────────────────────────────────────────────────────── [idle]  "
"   1╭User────────────────────────────────────────────────────────────────────╮▶ "
"   1│ first question                                                         │█ "
"   2╰────────────────────────────────────────────────────────────────────────╯█ "
"   3            1 step, 1 msg, bash x1                                        █ "
"   4                                                                          █ "
"   5 final one                                                                █ "
"   6                                                                          █ "
"   7╭User────────────────────────────────────────────────────────────────────╮█ "
"   8│ second question                                                        │█ "
"   9╰────────────────────────────────────────────────────────────────────────╯█ "
"  10            1 step, 1 msg, mymcp__ext x1                                  █ "
"  11                                                                          █ "
"  12 final two                                                                █ "
"                                                                              █ "
"                                                                              █ "
"                                                                              █ "
"                                                                              █ "
"                                                                              ▼ "
" ╭[INSERT]────────────────────────────────────────────────────────────────────╮ "
" │                                                                            │ "
" │                                                                            │ "
" ╰────────────────────────────────────────────────────────────────────────────╯ "
"  fold: z + a o c A R M j k                                                     "
