bin/tui/src/snapshots/tui__snapshot_tests__snap_turn_fold_in_progress_spinner.snap
---
source: bin/tui/src/snapshot_tests.rs
expression: out
---
" Session: s1──────────────────────────────────────────────────────── [running]  "
"   1╭User────────────────────────────────────────────────────────────────────╮▶ "
"   1│ first question                                                         │█ "
"   2╰────────────────────────────────────────────────────────────────────────╯█ "
"   3            1 step, 1 msg, bash x1                                        █ "
"   4                                                                          █ "
"   5 final one                                                                █ "
"   6                                                                          █ "
"   7╭User────────────────────────────────────────────────────────────────────╮█ "
"   8│ second question                                                        │█ "
"   9╰────────────────────────────────────────────────────────────────────────╯█ "
"  10            [SPINNER] 1 step, 2 msgs, mymcp__ext x1                               █ "
"                                                                              █ "
"                                                                              █ "
"                                                                              █ "
"                                                                              █ "
"                                                                              █ "
"                                                                              ▼ "
" [SPINNER]  Working...                                                                  "
" ╭[INSERT]────────────────────────────────────────────────────────────────────╮ "
" │                                                                            │ "
" │                                                                            │ "
" ╰────────────────────────────────────────────────────────────────────────────╯ "
"  q×2 quit · Ctrl+C stop · Ctrl+E edit · Enter send · Ctrl-J ⏎ · vim · y/n/e ·  "
