bin/tui/src/snapshots/tui__snapshot_tests__snap_turn_fold_l2_open_results_folded.snap
---
source: bin/tui/src/snapshot_tests.rs
expression: out
---
" Session: s1─────────────────────────────────────────────────────────── [idle]  "
"  17                                                                          █ "
"  16 let me look                                                              █ "
"  15                                                                          █ "
"  14                                                                          █ "
"  13 bash  exit 0                                                             █ "
"  12                                                                          █ "
"  11╭────────────────────────────────────────────────────────────────────────╮█ "
"  10│ final one                                                              │█ "
"   9╰────────────────────────────────────────────────────────────────────────╯█ "
"   8                                                                          █ "
"   7╭User────────────────────────────────────────────────────────────────────╮▶ "
"   6│ second question                                                        │█ "
"   5╰────────────────────────────────────────────────────────────────────────╯█ "
"   4            ⎿ 1 step · mymcp__ext ×1 · 1 msg                              █ "
"   3                                                                          █ "
"   2╭────────────────────────────────────────────────────────────────────────╮· "
"   1│ final two                                                              │· "
"  21╰────────────────────────────────────────────────────────────────────────╯▼ "
" ╭[INSERT]────────────────────────────────────────────────────────────────────╮ "
" │                                                                            │ "
" │                                                                            │ "
" ╰────────────────────────────────────────────────────────────────────────────╯ "
"  fold: z + a o c A R M j k                                                     "
