bin/tui/src/snapshots/tui__snapshot_tests__snap_turn_fold_l3_open.snap
---
source: bin/tui/src/snapshot_tests.rs
expression: out
---
" Session: s1─────────────────────────────────────────────────────────── [idle]  "
"  17 out 06                                                                   · "
"  16 out 07                                                                   · "
"  15 out 08                                                                   · "
"  14 out 09                                                                   · "
"  13 out 10                                                                   · "
"  12 out 11                                                                   · "
"  11 out 12                                                                   · "
"  10 out 13                                                                   · "
"   9                                                                          █ "
"   8                                                                          █ "
"   7 final one                                                                █ "
"   6                                                                          █ "
"   5╭User────────────────────────────────────────────────────────────────────╮█ "
"   4│ second question                                                        │█ "
"   3╰────────────────────────────────────────────────────────────────────────╯█ "
"   2            1 step, 1 msg, mymcp__ext x1                                  █ "
"   1                                                                          ▶ "
"  33 final two                                                                ▼ "
" ╭[INSERT]────────────────────────────────────────────────────────────────────╮ "
" │                                                                            │ "
" │                                                                            │ "
" ╰────────────────────────────────────────────────────────────────────────────╯ "
"  fold: z + a o c A R M j k                                                     "
